# agentic-runner

./: .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260507_0000_initial.py  20260508_0001_subtask_dependencies.py
eval/baselines/: runner_v1_fake.json
eval/suites/: runner_v1.yaml
src/agentic_runner/: __init__.py  api.py  cli.py  eval_harness.py  failure.py  models.py  parallel_runner.py  planner.py  runner.py  selector.py  settings.py  trace.py  validator.py
src/agentic_runner/providers/: __init__.py  anthropic_adapter.py  base.py  factory.py  fake.py  openai_adapter.py
src/agentic_runner/tools/: __init__.py  _base.py  calculate.py  composed.py  extract_json.py  finish.py  http_get.py  query_db.py  read_file.py  summarize.py  write_file.py
tests/: conftest.py
tests/e2e/: test_eval_smoke.py
tests/integration/: test_api.py  test_cli.py  test_runner_replay.py
tests/unit/: test_bench_regress.py  test_composed_tools.py  test_parallel_runner.py  test_planner.py  test_properties.py  test_runner.py  test_tool_registry.py  test_tools_calculate.py  test_tools_files.py  test_tools_finish.py  test_tools_http_get.py  test_tools_query_db.py  test_tools_summarize_extract.py  test_validator.py
