[project]
name = "agentic-runner"
version = "0.1.0"
description = "General-purpose agentic loop with goal decomposition, tool selection, output validation, and plan-driven replan on failure"
authors = [{ name = "Sai Asish Y" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115,<0.117",
    "uvicorn[standard]>=0.32,<0.36",
    "sqlalchemy>=2.0.36,<2.1",
    "alembic>=1.14,<1.16",
    "psycopg[binary]>=3.2,<3.3",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "click>=8.1,<8.3",
    "structlog>=24.4,<26",
    "httpx>=0.27,<0.29",
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<2",
    "pytest-cov>=5,<7",
    "ruff>=0.7,<0.13",
    "black>=24,<26",
    "mypy>=1.13,<2",
    "types-PyYAML>=6,<7",
    "hypothesis>=6.100,<7",
]

[project.scripts]
agentic-runner = "agentic_runner.cli:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/agentic_runner"]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["opentelemetry.*", "structlog.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/agentic_runner"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
